# btx-testbed

./: .gitmodules  CMakeLists.txt
assets/: engineConfig.json  gameConfig.json  plugins.json
game/: CMakeLists.txt  Main.cpp  Precompiled.hpp
game/client/: ClientGame.hpp
game/server/: ServerGame.hpp
launcher/: CMakeLists.txt  Main.cpp  Precompiled.hpp
